--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,7 @@
-<h2>Data loaded from the Web API:</h2>
-<div *ngIf="offers.length > 0" class="alert alert-warning" role="alert">
-  <li *ngFor="let item of offers">Offers: {{ item }}</li>
+<div class="mt-3 mb-5 text-center">
+  <h1>SignalR</h1>
+</div>
+
+<div class="container">
+  <app-chat></app-chat>
 </div>
